k8s/app/03-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: videogame-store-api
  namespace: videogame-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: videogame-store-api
  template:
    metadata:
      labels:
        app: videogame-store-api
    spec:
      containers:
        - name: api
          image: graphql-videogame-store:1.0
          imagePullPolicy: Never
          command:
            - sh
            - -c
            - npx prisma migrate deploy && npm run seed && npm start
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: videogame-store-api
  namespace: videogame-store
spec:
  selector:
    app: videogame-store-api
  ports:
    - port: 4000
      targetPort: 4000
